crates/iota/tests/snapshots/shell_tests__new_tests__gitignore_has_build.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/new_tests/gitignore_has_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# iota move new example when `example/.gitignore` already contains build/*; it should be unchanged
mkdir example
echo "ignore1" >> example/.gitignore
echo "build/*" >> example/.gitignore
echo "ignore2" >> example/.gitignore
iota move new example
cat example/.gitignore
echo
echo ==== files in example/ ====
ls -A example

----- results -----
success: true
exit_code: 0
----- stdout -----
ignore1
build/*
ignore2

==== files in example/ ====
.gitignore
Move.toml
sources
tests

----- stderr -----
