crates/iota/tests/snapshots/shell_tests__new_tests__new_then_test.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/new_tests/new_then_test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that iota move new followed by iota move test succeeds
iota move new example

# we mangle the generated toml file to replace the framework dependency with a local dependency
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/iota##g')
cat example/Move.toml \
  | sed 's#\(Iota = .*\)git = "[^"]*", \(.*\)#\1\2#' \
  | sed 's#\(Iota = .*\), rev = "[^"]*"\(.*\)#\1\2#' \
  | sed 's#\(Iota = .*\)subdir = "\([^"]*\)"\(.*\)#\1local = "FRAMEWORK/\2"\3#' \
  | sed "s#\(Iota = .*\)FRAMEWORK\(.*\)#\1$FRAMEWORK_DIR\2#" \
  > Move.toml
mv Move.toml example/Move.toml

cd example && iota move test

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Iota
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
